fix empty cart button alignment

--- a/sass/shop/_tables.scss
+++ b/sass/shop/_tables.scss
@@ -170,7 +170,6 @@ table.shop_table {
 					float: right;
 					margin-right: 15px;
 					margin-bottom: 15px;
-					line-height: 1;
 				}
 			}
 
